--- a/resume.html
+++ b/resume.html
@@ -110,7 +110,7 @@
 					<h4>Contact</h4>
 					<ul class="icons">
 						<li><a href="https://www.linkedin.com/in/ktt/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://github.com/kennytran147" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="https://github.com/kenny-t-tran" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 						<li><a href="mailto:kennytran147@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 			</section>
