--- a/projects.html
+++ b/projects.html
@@ -92,7 +92,7 @@
                             </p>
                             <footer>
                                 <ul class="actions">
-                                    <li><a href="https://github.com/kennytran147/cyclisticbikeshare" class="button large">View Project on Github</a></li>
+                                    <li><a href="https://github.com/kenny-t-tran/cyclisticbikeshare" class="button large">View Project on Github</a></li>
                                 </ul>
                             </footer>
                         </article>
@@ -164,7 +164,7 @@
 					<h4>Contact</h4>
 					<ul class="icons">
 						<li><a href="https://www.linkedin.com/in/ktt/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://github.com/kennytran147" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="https://github.com/kenny-t-tran" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 						<li><a href="mailto:kennytran147@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 			</section>
