--- a/hobbies.html
+++ b/hobbies.html
@@ -82,7 +82,7 @@
                             <span class="image featured"><img src="images/dj1.jpg" alt=""/></span>
                             <span class="image featured"><img src="images/dj2.jpg" alt=""/></span>
                             <p>
-                                DJ'ing is a big hobby of mine. Check out the link below to visit my SoundClouod and listen to my mixes featuring EDM and future beats. 
+                                DJ'ing is a big hobby of mine. Check out the link below to visit my SoundCloud and listen to my mixes featuring EDM and future beats. 
                             </p>
                             
                             <footer>
