--- a/resume.html
+++ b/resume.html
@@ -1,5 +1,9 @@
 <!DOCTYPE HTML>
-
+<!--
+	Future Imperfect by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
 	<head>
 		<title>Kenny Tran's Porfolio - Resume</title>
@@ -82,9 +86,6 @@
 									In addition, my experience as a server at a face-paced restaurant taught me strategic customer service and sales skills that I transferred into the retail industry as a sales advisor at H&M. 
 									Some of my accomplishments include enrolling a monthly average of 27% of my H&M guests into theloyalty program and helping Poke Bar reach a 4.7 average star review rating from the ground up on Yelp and Google. 
 									Working while attending school full-time has required my excellent time management and organizational skills, which eventually led to a raise at H&M and a promotion to assistant manager at Poke Bar.</p>
-								<p>
-									Apart from the skills listed in my resume, I'm currently learning Python, R, Tableau, and Power BI.
-								</p>
 								<p>
 									I'm currently searching for a data-driven role where I can apply my analytical thinking, creativity, and storytelling to solve problems. If you think I'm the right person for the job, please reach out!
 								</p>
