--- a/resume.html
+++ b/resume.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Kenny Tran's Porfolio - Resume</title>
+		<title>Kenny Tran - Resume</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,9 +21,8 @@
 						<h1><a >Resume</a></h1>
 						<nav class="links">
 							<ul>
-								<li><a href="index.html">MAIN</a></li>
+								<li><a href="index.html">HOME</a></li>
 								<li><a href="projects.html">PROJECTS</a></li>
-								<li><a href="hobbies.html">HOBBIES</a></li>
 
 							</ul>
 						</nav>
@@ -44,20 +43,13 @@
 								<ul class="links">
 									<li>
 										<a href="index.html">
-											<h3>Main</h3>
+											<h3>HOME</h3>
 											
 										</a>
 									</li>
 									<li>
 										<a href="projects.html">
-											<h3>MY PROJECTS</h3>
-											<p>The things I've worked on</p>
-										</a>
-									</li>
-									<li>
-										<a href="hobbies.html">
-											<h3>MY HOBBIES</h3>
-											<p>The things I love</p>
+											<h3>PROJECTS</h3>
 										</a>
 									</li>
 
@@ -79,22 +71,9 @@
 
 								</header>
 								<span class="image featured"><img src="images/resume.jpg" alt="" /></span>
-								<p>
-									All of my past work experience has been in a customer-facing role. 
-									As a Human Resources Intern for Aflac, my task was to source leads via LinkedIn, organize meetings, and manage by boss’s schedule. 
-									Through that experience, I developed administrative, communicative, and intrapersonal skills. 
-									In addition, my experience as a server at a face-paced restaurant taught me strategic customer service and sales skills that I transferred into the retail industry as a sales advisor at H&M. 
-									Some of my accomplishments include enrolling a monthly average of 27% of my H&M guests into theloyalty program and helping Poke Bar reach a 4.7 average star review rating from the ground up on Yelp and Google. 
-									Working while attending school full-time has required my excellent time management and organizational skills, which eventually led to a raise at H&M and a promotion to assistant manager at Poke Bar.</p>
-								<p>
-									I'm currently searching for a data-driven role where I can apply my analytical thinking, creativity, and storytelling to solve problems. If you think I'm the right person for the job, please reach out!
-								</p>
-								<p>
-									Please see the icons below for where you can contact me.
-								</p>
 								<footer>
 									<ul class="actions">
-										<li><a href="https://drive.google.com/file/d/1TGFlLVT_6FymIuOgMW6eKig5B5eExmIp/view?usp=sharing" class="button large">View PDF Resume</a></li>
+										<li><a href="https://drive.google.com/file/d/1TGFlLVT_6FymIuOgMW6eKig5B5eExmIp/view?usp=sharing" class="button large">View PDF</a></li>
 									</ul>
 								</footer>
 							</article>
