--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 								<h2>About Me</h2>
 								<p>
 									I'm a recent graduate of Cal State Fullerton, where I studied Business Administration, Entertainment and Hospitality Management, and English. 
-									I'm learning SQL, Python, R, Power BI, Tableau, and other analytical tools to build a carrer in data analytics. 
+									I'm learning SQL, Python, R, Power BI, Tableau, and other analytical tools to build a career in data analytics. 
 									I'm currently searching for a data-driven role where I can apply my analytical thinking, creativity, and storytelling to solve problems. 
 									<br> 
 								</p>
