--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
 											<h3>Resume</h3>
 										</a>
 									</li>
+									<li>
+										<a href="/ktt/photography.html">
+											<h3>Photography</h3>
+										</a>
+									</li>
 								</ul>
 							</section>
 					</section>
