--- a/ktt/photography.html
+++ b/ktt/photography.html
@@ -17,7 +17,7 @@
 
 
 
-  <title>Title page</title>  
+  <title>Kenny Tran - Photography</title>  
 
 <link href="./main.82cfd66e.css" rel="stylesheet"></head>
 
