--- a/index.html
+++ b/index.html
@@ -459,10 +459,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 						<!-- Intro -->
 							<section id="intro">
-								<a class="logo"><img src="images/profilepic.jpg" alt=""/></a>
+								<!-- Intro <a class="logo"><img src="images/profilepic.jpg" alt=""/></a> -->
 								<header>
 									<h2>Kenny Thanh Tran</h2>
-									<p>Data Analyst</a></p>
+									<p>Operations Expert and Data Analyst</a></p>
 								</header>
 							</section>
 
@@ -470,9 +470,11 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							<section class="blurb">
 								<h2>About Me</h2>
 								<p>
-									I'm a recent graduate of Cal State Fullerton, where I studied Business Administration, Entertainment and Hospitality Management, and English. 
-									I'm learning SQL, Python, R, Power BI, Tableau, and other analytical tools to build a career in data analytics. 
-									I'm currently searching for a data-driven role where I can apply my analytical thinking, creativity, and storytelling to solve problems. 
+									I'm currently working as an Operations Coordinator at Place Showroom, a multi-line showroom working with brands at all stages of their life cycle, where we've built world-renowned labels through our expertise in sales management, operations, merchandising, and market visibility.
+									<br>
+									<br>
+									I'm a recent graduate of Cal State Fullerton, where I studied Business Administration, Entertainment and Hospitality Management, and English. <br> <br>
+									I'm learning VBA, SQL, Python, R, Power BI, Tableau, and other analytical tools to build a career in data analytics and operations.  
 									<br> 
 								</p>
 							</section>
