--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Kenny Tran - Data Analyst</title>
+		<title>Kenny Tran's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -461,20 +461,17 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							<section id="intro">
 								<!-- Intro <a class="logo"><img src="images/profilepic.jpg" alt=""/></a> -->
 								<header>
-									<h2>Kenny Thanh Tran</h2>
-									<p>Operations Expert and Data Analyst</a></p>
+									<h2>Kenny Tran</h2>
+									<p>Operations Expert</a></p>
 								</header>
 							</section>
 
 						<!-- About -->
 							<section class="blurb">
 								<h2>About Me</h2>
-								<p>
-									I'm currently working as an Operations Coordinator at Place Showroom, a multi-line showroom working with brands at all stages of their life cycle, where we've built world-renowned labels through our expertise in sales management, operations, merchandising, and market visibility.
-									<br>
-									<br>
-									I'm a recent graduate of Cal State Fullerton, where I studied Business Administration, Entertainment and Hospitality Management, and English. <br> <br>
-									I'm learning VBA, SQL, Python, R, Power BI, Tableau, and other analytical tools to build a career in data analytics and operations.  
+								Currently open to any opportunities involving data. <br> <br>
+								Advanced in Excel. Proficient in VBA, Power BI, and Tableau. <br> <br>
+								Learning SQL, Python, R, and other analytical tools to build a career in data analytics and operations. 
 									<br> 
 								</p>
 							</section>
