--- a/ktt/photography.html
+++ b/ktt/photography.html
@@ -99,6 +99,10 @@
       <img class="img-responsive" alt="" src="./assets/portfolio/ktt_17.jpg">
     </div>
 
+      <div class="grid-item">
+      <img class="img-responsive" alt="" src="./assets/portfolio/ktt_19.jpg">
+    </div>
+
     <div class="grid-item">
       <img class="img-responsive" alt="" src="./assets/portfolio/ktt_11.jpg">
     </div>
